prevent cart content from jumping

--- a/src/components/common/QuantityControl/QuantityControl.module.css
+++ b/src/components/common/QuantityControl/QuantityControl.module.css
@@ -10,6 +10,7 @@
 }
 
 .quantity-text {
+  margin-left: unset;
   text-align: center;
   font-size: 14px;
   font-weight: 500;
